tests/sksl/errors/ReservedNameHvec2.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'hvec2'
1 error
